--- a/uch.html
+++ b/uch.html
@@ -7,6 +7,7 @@
     <title>Учасники BTS</title>
 </head>
 <body>
+    <h1 align= "center">Учасники БТС</h1>
     <p align= "center"><img src="Фон.jpg" width="40%" height="40%" ></p>
         <style>
                 body { background: rgb(151, 189, 247)}
@@ -62,17 +63,97 @@
             </tr>
         </table>
         <p><img src="Намджун.jpg" width="20%" height="20%">
+        <p><ul>
+                <li><h3>RM – Forever rain</h3>
+                    <audio controls>
+                        <source src="RM – Forever rain.mp3" >
+                    </audio>
+                </li>
+            </ul>
+        </p>
+        <p><ul>
+                <li><h3>RM – Moonchild</h3>
+                    <audio controls>
+                        <source src="RM – moonchild.mp3" >
+                    </audio>
+                </li>
+            </ul>
+        </p>
         <p>Перед дебютом у 2013 році <b>Rap Monster (RM)</b> вже був андеграундним репером і випустив декілька неофіційних треків, у тому числі з участю Zico (Зіко) з гурту Block B.
         <p><img src="Ворлдвайд хендсом.jpg" width="20%" height="20%">
+        <p><ul>
+                <li><h3>Jin – Epiphany</h3>
+                    <audio controls>
+                        <source src="Jin – Epiphany.mp3" >
+                    </audio>
+                </li>
+            </ul>
+        </p>
         <p><b>Джин</b> (найстарший учасник) навчався в Konkuk University, де вивчав акторську майстерність, доки його не зустріли на вулиці і не запропонували прийти на прослуховування.</p>
-        <p><img src="Юнгі.jpg" width="20%" height="20%">                
+        <p><img src="Юнгі.jpg" width="20%" height="20%">
+        <p><ul>
+                <li><h3>Agust D – Give it to me</h3>
+                    <audio controls>
+                        <source src="Agust D – 03. give it to me.mp3" >
+                    </audio>
+                </li>
+            </ul>
+        </p>  
+        <p><ul>
+                <li><h3>Agust D – Tony Montana (Feat. Yankie)</h3>
+                    <audio controls>
+                        <source src="Agust D – Tony Montana (Feat. Yankie).mp3" >
+                    </audio>
+                </li>
+            </ul>
+        </p>              
         <p><b>Шуґа</b> був андеграундним репером у Теґу. Він не планував бути відомим, просто хотів писати музику та заробляти гроші. Сім'я Юнгі не підтримувала його захоплення музикою.
-        <p><img src="Чим.jpg" width="20%" height="20%">        
+        <p><img src="Чим.jpg" width="20%" height="20%">
+        <p><ul>
+                <li><h3>Jimin – Lie</h3>
+                    <audio controls>
+                        <source src="Jimin – Lie .mp3" >
+                    </audio>
+                </li>
+            </ul>
+        </p>        
         <p>До приходу в Big Hit <b>Чімін</b> навчався у Пусанській старшій школі мистецтв (Busan High School of Arts) як найкращий студент у сучасному танці, але потім він був переведений до Корейської старшої школи мистецтв (Korea Arts High School). Йому пройти прослуховування порадив вчитель.
-        <p><img src="Вишенка.jpg" width="20%" height="20%">        
+        <p><img src="Вишенка.jpg" width="20%" height="20%">
+        <p><ul>
+                <li><h3>V – Intro Singularity</h3>
+                    <audio controls>
+                        <source src="V – Intro Singularity.mp3" >
+                    </audio>
+                </li>
+            </ul>
+        </p>        
         <p><b>Ві</b> прийшов на прослуховування щоб підтримати друга, але в результаті сам став трейні і був також переведений до Корейської старшої школи мистецтв (Korea Arts High School). Ві та Чімін - однолітки та є найкращими друзями.
-        <p><img src="Хоуп.jpg" width="20%" height="20%">        
+        <p><img src="Хоуп.jpg" width="20%" height="20%">
+        <p><ul>
+                <li><h3>J-hope – Airplane</h3>
+                    <audio controls>
+                        <source src="J-hope – Airplane.mp3" >
+                    </audio>
+                </li>
+            </ul>
+        </p>
+        <p><ul>
+                <li><h3>J-hope – Daydream</h3>
+                    <audio controls>
+                        <source src="J-hope – Daydream.mp3" >
+                    </audio>
+                </li>
+            </ul>
+        </p>        
         <p><b>Джей-Хоуп</b> був частиною вуличної танцювальної команди під назвою NEURON (Нейрон), активно брав участь у «підпільній» танцювальній сцені, був задіяний в різних поєдинках і змаганнях. До діяльності в групі Джей-Хоуп не займався репом, тому мусив починати все спочатку.
-        <p><img src="Гук.jpg" width="20%" height="20%">        
+        <p><img src="Гук.jpg" width="20%" height="20%"> 
+        <p><ul>
+                <li><h3>Jungkook - Begin</h3>
+                    <audio controls>
+                        <source src="Jungkook - Begin .mp3" >
+                    </audio>
+                </li>
+            </ul>
+        </p>       
         <p>Наймолодший учасник групи — <b>Чонгук</b> — прослуховувався у декількох агенствах, але врешті вибрав Big Hit, тому що захоплювався RM-ом. Чонгук все ще навчався в школі, коли став учасником групи, він успішно закінчив її у 2017 році.</p>
 </body>
